--- a/final/src/app/app.component.html
+++ b/final/src/app/app.component.html
@@ -1,3 +1,8 @@
 <router-outlet></router-outlet>
 <app-nav-bar-component></app-nav-bar-component>
-<app-background></app-background>
+<app-background>
+    <app-grid-layout></app-grid-layout>
+    <app-feedback-navbar></app-feedback-navbar>
+</app-background>
+
+
