--- a/final/src/app/components/background/background.component.html
+++ b/final/src/app/components/background/background.component.html
@@ -1,4 +1,5 @@
-<div class="bg-image d-flex justify-content-center align-items-center shadow-1-strong rounded" 
+<div class="bg-image d-flex justify-content-center align-items-center p-3" 
      style="background: url('https://www.macauitclinic.com/wp-content/uploads/2017/06/background-team.png'); background-size:cover; height: 95vh">
-     <h1>Feedback</h1>
+     <app-grid-layout class="shadow-1-strong w-100"></app-grid-layout>
+     <app-feedback-navbar></app-feedback-navbar>
 </div>
