--- a/final/src/app/components/background/background.component.html
+++ b/final/src/app/components/background/background.component.html
@@ -1,4 +1,4 @@
-<div class="bg-image d-flex justify-content-center align-items-center p-3" 
+<div class="bg-image" 
      style="background: url('https://www.macauitclinic.com/wp-content/uploads/2017/06/background-team.png'); background-size:cover; height: 95vh">
      <app-grid-layout class="shadow-1-strong w-100"></app-grid-layout>
      <app-feedback-navbar></app-feedback-navbar>
