--- a/final/src/app/components/screen-two/screen-two.component.html
+++ b/final/src/app/components/screen-two/screen-two.component.html
@@ -2,4 +2,5 @@
  <!-- said failed to compile w these<feedback></feedback> 
    <comments></comments>
    <contact></contact> maybe need -form? -->  
+   <app-contact></app-contact>
 </div>
