--- a/final/src/app/app.component.html
+++ b/final/src/app/app.component.html
@@ -1,3 +1,5 @@
 <router-outlet></router-outlet>
 <app-nav-bar-component></app-nav-bar-component>
 <app-comments> </app-comments>
+<app-contact></app-contact>
+<app-feedback> </app-feedback>
