--- a/final/src/app/app.component.html
+++ b/final/src/app/app.component.html
@@ -1,14 +1,3 @@
-<router-outlet></router-outlet>
 <app-nav-bar-component></app-nav-bar-component>
-<<<<<<< HEAD
-<app-comments> </app-comments>
-<app-contact></app-contact>
-<app-feedback> </app-feedback>
-=======
-<app-background>
-    <app-grid-layout></app-grid-layout>
-
-</app-background>
-
-
->>>>>>> victor
+<app-background></app-background>
+<router-outlet></router-outlet>
