--- a/final/src/app/components/feedback/feedback.component.html
+++ b/final/src/app/components/feedback/feedback.component.html
@@ -1,7 +1,7 @@
+<div class="text-center w-100" style="background-color: azure; border-radius: 2rem;">
 <div class="container">
      <div class="card-body p-5">
-            <h1 class="card-title text-center mt-3">Project selected: <!-- error here bc proj isnt class of
-                feedback... import it or dont use? - {{project.id}}--> </h1>
+            <h3 class="card-title text-center mt-3">Project Selected:{{receivedId}} </h3>
             <hr>
     <form>
         <div class="form-group text-center">
@@ -13,4 +13,5 @@
     </form>
         </div>
  </div>
+</div>
 
