--- a/final/src/app/components/grid-layout/grid-layout.component.html
+++ b/final/src/app/components/grid-layout/grid-layout.component.html
@@ -14,3 +14,4 @@
       <span> > </span>
     </a>
   </div>
+<!-- <app-feedback class="" [receivedId]="projectObjects[index].id"></app-feedback> -->
