--- a/final/src/app/components/screen-two/screen-two.component.html
+++ b/final/src/app/components/screen-two/screen-two.component.html
@@ -1,6 +1,3 @@
 <div> 
-   <app-feedback></app-feedback> 
-   <app-comments></app-comments>
-   <app-contact></app-contact>  
-   <app-contact></app-contact>
+   <h1>this works</h1>
 </div>
