--- a/final/src/app/components/feedback-navbar/feedback-navbar.component.html
+++ b/final/src/app/components/feedback-navbar/feedback-navbar.component.html
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light m-5" style="border-radius: 3rem;">
     <div class="collapse navbar-collapse d-flex justify-content-center align-items-center" id="navbarNav">
-      <ul class="navbar-nav text-center" style="font-size: 20px;">
-        <li class="nav-item col-md-4">
-          <a class="nav-link" href="#">Feedback<span class="sr-only"></span></a>
+      <ul class="navbar-nav" style="font-size: 20px;">
+        <li class="nav-item mx-5">
+          <a class="nav-link" (click)="feedbackClicked()" style="text-decoration: none;" >Feedback</a>
         </li>
-        <li class="nav-item col-md-4">
-          <a class="nav-link" href="#">Comment</a>
+        <li class="nav-item mx-5">
+          <a class="nav-link" (click)="commentClicked()"style="text-decoration: none;">Comment</a>
         </li>
-        <li class="nav-item col-md-4">
-          <a class="nav-link" href="#">Contact</a>
+        <li class="nav-item mx-5">
+          <a class="nav-link" (click)="contactClicked()"style="text-decoration: none;">Contact</a>
         </li>
-        <li class="nav-item col-md-4">
-            <a class="nav-link" href="#">Suggestions</a>
+        <li class="nav-item mx-5">
+          <a class="nav-link" (click)="historyClicked()"style="text-decoration: none;">History</a>
         </li>
       </ul>
     </div>
