--- a/final/src/app/app.component.html
+++ b/final/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-nav-bar-component></app-nav-bar-component>
-<app-background></app-background>
+<!-- <app-feedback-navbar></app-feedback-navbar> -->
+<!-- <app-background></app-background> -->
 <router-outlet></router-outlet>
