--- a/final/src/app/components/comments/comments.component.html
+++ b/final/src/app/components/comments/comments.component.html
@@ -1,15 +1,15 @@
-<div class="text-center w-100" style="background-color: azure; border-radius: 2rem;">
+<div class="text-center w-100 mt-5" style="background-color: azure; border-radius: 2rem;">
 <div class="container">
     <div class="card-body p-5">
-           <h3 class="card-title text-center mt-3">Project selected: {{receivedId}}</h3>
+           <h3 class="card-title text-center mt-3">Project selected: <!--{{receivedId}}--></h3>
            <hr>
    <form>
        <div class="form-group text-center">
         <label for="inputField">Enter comments below!</label>
-       <input type="input" class="form-control" id="inputField" aria-describedby="input here" placeholder="Enter comments here">
+       <input type="input" class="form-control mt-3" [(ngModel)]="comment" id="inputField" aria-describedby="input here" placeholder="Enter comments here">
      
         </div>
-        <button type="submit" (click)="onSubmit()" class="btn btn-primary float-right">Submit</button>
+        <button type="button" (click)="nextClicked()" class="btn btn-primary float-right mt-3">Next</button>
    </form>
        </div>
 </div>
