--- a/final/src/app/components/feedback-navbar/feedback-navbar.component.html
+++ b/final/src/app/components/feedback-navbar/feedback-navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light m-5" style="border-radius: 3rem;">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light m-5" style="border-radius: 3rem;">
     <div class="collapse navbar-collapse d-flex justify-content-center align-items-center" id="navbarNav">
       <ul class="navbar-nav" style="font-size: 20px;">
         <li class="nav-item mx-5">
@@ -15,4 +15,4 @@
         </li>
       </ul>
     </div>
-  </nav>
+  </nav> -->
