--- a/final/src/app/components/feedback/feedback.component.html
+++ b/final/src/app/components/feedback/feedback.component.html
@@ -1,15 +1,15 @@
-<div class="text-center w-100" style="background-color: azure; border-radius: 2rem;">
+<div class="text-center w-100 mt-5" style="background-color: azure; border-radius: 2rem;">
 <div class="container">
      <div class="card-body p-5">
-            <h3 class="card-title text-center mt-3">Project Selected:{{receivedId}} </h3>
+            <h3 class="card-title text-center mt-3">Project Selected:<!-- {{projects[receivedIndex].id}}--> </h3>
             <hr>
     <form>
         <div class="form-group text-center">
          <label for="inputField">Provide feedback below!</label>
-        <input type="input" class="form-control" id="inputField" aria-describedby="input here" placeholder="Enter feedback here">
+        <input type="input" class="form-control mt-3" [(ngModel)]="feedback" id="inputField" aria-describedby="input here" placeholder="Enter feedback here">
       
          </div>
-         <button type="submit" (click)="onSubmit()" class="btn btn-primary float-right">Submit</button>
+         <button type="submit" (click)="nextClicked()" class="btn btn-primary float-right mt-3">Next</button>
     </form>
         </div>
  </div>
