--- a/final/src/app/components/nav-bar-component/nav-bar-component.component.html
+++ b/final/src/app/components/nav-bar-component/nav-bar-component.component.html
@@ -1,3 +1,26 @@
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand mx-4 text-align-center" (click)="navHome()">Appstrax</a>
+</nav> -->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand mx-4 text-align-center">Appstrax</a>
+  <div class="pl-5"> 
+    <a class=" ml-5 navbar-brand text-align-center" (click)="navHome()">Appstrax</a>
+  </div>
+
+  <div class="collapse navbar-collapse d-flex justify-content-center align-items-center" id="navbarNav">
+    <ul class="navbar-nav" style="font-size: 20px;">
+      <li class="nav-item mx-5">
+        <a class="nav-link" (click)="feedbackClicked()" style="text-decoration: none;" >Feedback</a>
+      </li>
+      <li class="nav-item mx-5">
+        <a class="nav-link" (click)="commentClicked()"style="text-decoration: none;">Comment</a>
+      </li>
+      <li class="nav-item mx-5">
+        <a class="nav-link" (click)="contactClicked()"style="text-decoration: none;">Contact</a>
+      </li>
+      <li class="nav-item mx-5">
+        <a class="nav-link" (click)="historyClicked()"style="text-decoration: none;">History</a>
+      </li>
+    </ul>
+  </div>
 </nav>
