--- a/final/src/app/components/contact/contact.component.html
+++ b/final/src/app/components/contact/contact.component.html
@@ -6,8 +6,11 @@
    <form>
        <div class="form-group text-center">
         <label for="inputField">We'd love to hear from you!</label>
-       <input type="input" class="form-control mt-3" [(ngModel)]="contact" id="inputField" aria-describedby="input here" placeholder="Contact information here">
-     <!-- add multiple input fields here, name, email, message ... but isnt this just comments/feedback, discuss-->
+        <div class="input-group my-3">
+          <span class="input-group-text" id="basic-addon1">#</span>
+          <input type="input" class="form-control" [(ngModel)]="contact" id="inputField" aria-describedby="input here" placeholder="Contact information here">
+        </div>
+          <!-- add multiple input fields here, name, email, message ... but isnt this just comments/feedback, discuss-->
         </div>
         <button type="button" (click)="onSubmit()" class="btn btn-primary float-right mt-3" data-bs-toggle="modal"
         data-bs-target="#staticBackdrop">Submit </button>
