--- a/final/src/app/components/feedback/feedback.component.html
+++ b/final/src/app/components/feedback/feedback.component.html
@@ -5,11 +5,26 @@
             <hr>
     <form>
         <div class="form-group text-center">
-         <label for="inputField">Provide feedback below!</label>
-        <input type="input" class="form-control mt-3" [(ngModel)]="feedback" id="inputField" aria-describedby="input here" placeholder="Enter feedback here">
-      
-         </div>
-         <button type="submit" (click)="nextClicked()" class="btn btn-primary float-right mt-3">Next</button>
+            <label for="inputField">Provide feedback below!</label>
+            <input type="input" class="form-control mt-3" [(ngModel)]="feedback" id="inputField" aria-describedby="input here" placeholder="Enter feedback here">
+        </div>
+        <button
+            *ngIf="!this.editing"
+            class="btn btn-primary"
+            (click)="addFeedback()"
+            [disabled]="this.feedback?.id == null || this.feedback?.content == null"
+            >
+            Add Post
+            </button>
+        <button
+            *ngIf="this.editing"
+            class="btn btn-primary"
+            (click)="updateFeedback()"
+            [disabled]="this.feedback?.id == null || this.feedback?.content == null"
+            >
+            Update Post
+            </button>
+        <button type="submit" (click)="nextClicked()" class="btn btn-primary float-right mt-3">Next</button>
     </form>
         </div>
  </div>
