--- a/final/src/app/components/contact/contact.component.html
+++ b/final/src/app/components/contact/contact.component.html
@@ -1,19 +1,35 @@
 <div class="text-center w-100 mt-5" style="background-color: azure; border-radius: 2rem;">
-<div class="container">
+<div class="container p-3">
+    <div class="card-title text-center mt-4">
+      <h3>Project selected: {{projects[index].title}} </h3>
+      <hr>
+    </div>
     <div class="card-body p-5">
-           <h3 class="card-title text-center mt-3">Project selected:{{receivedId}} </h3>
-           <hr>
-   <form>
-       <div class="form-group text-center">
-        <label for="inputField">We'd love to hear from you!</label>
+      <div class="form-group text-center">
+        <label for="inputField">We'd love to hear from you! Let us reach out to you. </label>
         <div class="input-group my-3">
           <span class="input-group-text" id="basic-addon1">#</span>
-          <input type="input" class="form-control" [(ngModel)]="contact" id="inputField" aria-describedby="input here" placeholder="Contact information here">
+          <input type="text" class="form-control" id="contact" placeholder="Contact information here" [(ngModel)]="contact.content">
         </div>
-        </div>
-        <button type="button" (click)="onSubmit()" class="btn btn-primary float-right mt-3" data-bs-toggle="modal"
+      </div>
+      <button
+          *ngIf="!this.editing"
+          class="btn btn-primary mt-3"
+          (click)="addContact()"
+          [disabled]="this.contact?.id == null"
+          >
+          Add Contact
+          </button>
+      <button
+          *ngIf="this.editing"
+          class="btn btn-primary"
+          (click)="updateContact()"
+          [disabled]="this.contact?.id == null"
+          >
+          Update Post
+          </button>
+        <button type="button" class="btn btn-primary float-right mt-3" data-bs-toggle="modal"
         data-bs-target="#staticBackdrop">Submit </button>
-   </form>
        </div>
 </div>
 
@@ -38,7 +54,7 @@
          ></button>
        </div>
        <div class="modal-body">
-           <p>Thank you for your feedback! You can check your responses from the History tab.</p> 
+           <p>Thank you for your feedback!</p> 
        </div>
      </div>
    </div>
@@ -47,12 +63,12 @@
 
 <div class="card mt-5">
   <div class="card-title text-center mt-3">
-    <h3>Posts from MongoDB</h3>
+    <h3>Past Contacts</h3>
   </div>
 
   <div class="row">
     <div class="col text-center">
-      <button class="btn btn-secondary" (click)="viewContact()">
+      <button class="btn btn-secondary" (click)="fetchContact()">
         View Contact
       </button>
     </div>
