--- a/final/src/app/components/feedback/feedback.component.html
+++ b/final/src/app/components/feedback/feedback.component.html
@@ -1,43 +1,43 @@
 <div class="text-center w-100 mt-5" style="background-color: azure; border-radius: 2rem;">
-<div class="container">
+<div class="container p-3">
+      <div class="card-title text-center mt-4">
+        <h3 class="card-title text-center mt-3">Project Selected: {{projects[index].title}} </h3>
+        <hr>
+      </div>
      <div class="card-body p-5">
-            <h3 class="card-title text-center mt-3">Project Selected:<!-- {{projects[receivedIndex].id}}--> </h3>
-            <hr>
-    <form>
         <div class="form-group text-center">
             <label for="inputField">Provide feedback below!</label>
-            <input type="input" class="form-control mt-3" [(ngModel)]="feedback" id="inputField" aria-describedby="input here" placeholder="Enter feedback here">
+            <input type="text" class="form-control mt-3" id="feedback" placeholder="Enter feedback here" [(ngModel)]="feedback.content">
         </div>
         <button
             *ngIf="!this.editing"
-            class="btn btn-primary"
+            class="btn btn-primary mt-3"
             (click)="addFeedback()"
-            [disabled]="this.feedback?.id == null || this.feedback?.content == null"
+            [disabled]="this.feedback.content == null"
             >
-            Add Post
+            Add Feedback
             </button>
         <button
             *ngIf="this.editing"
             class="btn btn-primary"
             (click)="updateFeedback()"
-            [disabled]="this.feedback?.id == null || this.feedback?.content == null"
+            [disabled]="this.feedback.content == null"
             >
             Update Post
             </button>
         <button type="submit" (click)="nextClicked()" class="btn btn-primary float-right mt-3">Next</button>
-    </form>
         </div>
  </div>
 </div>
 
 <div class="card mt-5">
     <div class="card-title text-center mt-3">
-      <h3>Posts from MongoDB</h3>
+      <h3>Past Feedbacks</h3>
     </div>
   
     <div class="row">
       <div class="col text-center">
-        <button class="btn btn-secondary" (click)="viewFeedback()">
+        <button class="btn btn-secondary" (click)="fetchFeedback()">
           View Feedback
         </button>
       </div>
@@ -71,7 +71,7 @@
             data-bs-parent="#accordionExample"
           >
             <div class="accordion-body">
-              <strong> {{ feedback.content }} </strong>
+              <strong> {{ this.feedback.content }} </strong>
   
               <div class="row">
                 <div class="col-12 d-flex justify-content-center">
