--- a/final/src/app/components/grid-layout/grid-layout.component.html
+++ b/final/src/app/components/grid-layout/grid-layout.component.html
@@ -33,5 +33,9 @@
 </div>
 
 <div class="container mt-5">
-  <app-feedback [projects]="projects" [receivedIndex]="index"></app-feedback>
+  <app-feedback [index]="index"></app-feedback>
+  <div class="container d-none">
+    <app-comments [index]="index"></app-comments>
+    <app-contact [index]="index"></app-contact>
+  </div>
 </div>
