--- a/final/src/app/components/nav-bar-component/nav-bar-component.component.html
+++ b/final/src/app/components/nav-bar-component/nav-bar-component.component.html
@@ -1,10 +1,6 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand mx-4 text-align-center" (click)="navHome()">Appstrax</a>
-</nav> -->
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="pl-5"> 
-    <a class=" ml-5 navbar-brand text-align-center" (click)="navHome()">Appstrax</a>
+    <a class=" navbar-brand text-align-center" (click)="navHome()">Appstrax</a>
   </div>
 
   <div class="collapse navbar-collapse d-flex justify-content-center align-items-center" id="navbarNav">
@@ -17,9 +13,6 @@
       </li>
       <li class="nav-item mx-5">
         <a class="nav-link" (click)="contactClicked()"style="text-decoration: none;">Contact</a>
-      </li>
-      <li class="nav-item mx-5">
-        <a class="nav-link" (click)="historyClicked()"style="text-decoration: none;">History</a>
       </li>
     </ul>
   </div>
