--- a/final/src/app/components/background/background.component.html
+++ b/final/src/app/components/background/background.component.html
@@ -1,5 +1,4 @@
-<div class="bg-image" 
-     style="background: url('https://www.macauitclinic.com/wp-content/uploads/2017/06/background-team.png'); background-size:cover; height: 120vh">
+<div class="bg-image pb-3" 
+style="background: url('https://www.macauitclinic.com/wp-content/uploads/2017/06/background-team.png'); background-size:cover; height:100%">
      <app-grid-layout  class="shadow-1-strong"></app-grid-layout>
 </div>
-<!--[projects]="projects"-->
