--- a/final/src/app/components/comments/comments.component.html
+++ b/final/src/app/components/comments/comments.component.html
@@ -1,11 +1,12 @@
-<div class="text-center w-100 mt-5" style="background-color: azure; border-radius: 2rem;">
-<div class="container p-3">
-    <div class="card-title text-center mt-4">
-      <h3 class="card-title text-center mt-3">Project selected: {{projects[index].title}}</h3>
-      <hr>
-    </div>
-    <div class="card-body p-5">
-       <div class="form-group text-center">
+<div class="container p-5">
+  <div class="text-center w-100" style="background-color: azure; border-radius: 2rem;">
+    <div class="container p-3">
+      <div class="card-title text-center mt-4">
+        <h3 class="card-title text-center mt-3">Project Selected: {{projects[index].title}}</h3>
+        <hr>
+      </div>
+      <div class="card-body p-5">
+        <div class="form-group text-center">
           <label for="inputField">Enter comments below! How did you think we did?</label>
           <div class="input-group my-3">
             <input  type="text" class="form-control mt-3" id="comment" placeholder="Enter comments here" [(ngModel)]="comment.content">
@@ -20,18 +21,18 @@
             </button>
         <button
             *ngIf="this.editing"
-            class="btn btn-primary"
+            class="btn btn-primary mt-3"
             (click)="updateComment()"
             [disabled]="this.comment?.id == null"
             >
             Update Post
             </button>
         <button type="button" (click)="nextClicked()" class="btn btn-primary float-right mt-3">Next</button>
-       </div>
-</div>
-</div>
+      </div>
+    </div>
+  </div>
 
-<div class="card mt-5">
+  <div class="card mt-5">
     <div class="card-title text-center mt-3">
       <h3>Past Comments</h3>
     </div>
@@ -89,3 +90,4 @@
         </div>
       </div>
     </div>
+  </div>
