--- a/final/src/app/components/contact/contact.component.html
+++ b/final/src/app/components/contact/contact.component.html
@@ -1,116 +1,115 @@
-<div class="text-center w-100 mt-5" style="background-color: azure; border-radius: 2rem;">
-<div class="container p-3">
-    <div class="card-title text-center mt-4">
-      <h3>Project selected: {{projects[index].title}} </h3>
-      <hr>
-    </div>
-    <div class="card-body p-5">
-      <div class="form-group text-center">
-        <label for="inputField">We'd love to hear from you! Let us reach out to you. </label>
-        <div class="input-group my-3">
-          <span class="input-group-text" id="basic-addon1">#</span>
-          <input type="text" class="form-control" id="contact" placeholder="Contact information here" [(ngModel)]="contact.content">
-        </div>
+<div class="container p-5">
+  <div class="text-center w-100" style="background-color: azure; border-radius: 2rem;">
+    <div class="container p-3">
+      <div class="card-title text-center mt-4">
+        <h3>Project Selected: {{projects[index].title}} </h3>
+        <hr>
       </div>
-      <button
+      <div class="card-body p-5">
+        <div class="form-group text-center">
+          <label for="inputField">We'd love to hear from you! Let us reach out to you. </label>
+          <div class="input-group my-3">
+            <span class="input-group-text" id="basic-addon1">#</span>
+            <input type="text" class="form-control" id="contact" placeholder="Contact information here" [(ngModel)]="contact.content">
+          </div>
+        </div>
+        <button
           *ngIf="!this.editing"
           class="btn btn-primary mt-3"
           (click)="addContact()"
           >
           Add Contact
-          </button>
-      <button
+        </button>
+        <button
           *ngIf="this.editing"
-          class="btn btn-primary"
+          class="btn btn-primary mt-3"
           (click)="updateContact()"
           [disabled]="this.contact?.id == null"
           >
           Update Post
-          </button>
+        </button>
         <button type="button" class="btn btn-primary float-right mt-3" data-bs-toggle="modal"
         data-bs-target="#staticBackdrop">Submit </button>
-       </div>
-</div>
+      </div>
+    </div>
 
- <!-- Modal -->
- <div class="modal fade"
-    id="staticBackdrop"
-    data-bs-backdrop="static"
-    data-bs-keyboard="false"
-    tabindex="-1"
-    aria-labelledby="staticBackdropLabel"
-    aria-hidden="true">
-   <div class="modal-dialog">
+    <!-- Modal -->
+    <div class="modal fade"
+      id="staticBackdrop"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="staticBackdropLabel"
+      aria-hidden="true">
+      <div class="modal-dialog">
    
      <!-- Modal content-->
-     <div class="modal-content">
-       <div class="modal-header">
-         <button
-           type="button"
-           class="btn-close"
-           data-bs-dismiss="modal"
-           aria-label="Close"
-         ></button>
-       </div>
-       <div class="modal-body">
-           <p>Thank you for your feedback!</p> 
-       </div>
-     </div>
-   </div>
- </div>
-</div>
-
-<div class="card mt-5">
-  <div class="card-title text-center mt-3">
-    <h3>Past Contacts</h3>
+        <div class="modal-content">
+          <div class="modal-header">
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body text-center">
+            <p>Thank you for your feedback!</p> 
+            <button type="submit" (click)="doneClicked()" class="btn btn-primary float-right mt-3" data-bs-dismiss="modal" aria-label="Close">Done</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="row">
-    <div class="col text-center">
-      <button class="btn btn-secondary" (click)="fetchContact()">
+  <div class="card mt-5">
+    <div class="card-title text-center mt-3">
+      <h3>Past Contacts</h3>
+    </div>
+    <div class="row">
+      <div class="col text-center">
+        <button class="btn btn-secondary" (click)="fetchContact()">
         View Contact
-      </button>
-    </div>
-  </div>
-
-  <div class="card-body">
-    <hr />
-
-    <div class="row" *ngIf="this.contacts?.length == 0">
-      <div class="col text-center">No Posts</div>
+        </button>
+      </div>
     </div>
 
-    <div class="accordion" id="accordionExample" *ngFor="let contact of contacts">
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-          <button
-            class="accordion-button"
-            type="button"
-            data-bs-toggle="collapse"
-            [attr.data-bs-target]="'#A' + contact.id"
-            aria-expanded="true"
-            aria-controls="collapseOne"
-          >
+    <div class="card-body">
+      <hr />
+      <div class="row" *ngIf="this.contacts?.length == 0">
+        <div class="col text-center">No Posts</div>
+      </div>
+      <div class="accordion" id="accordionExample" *ngFor="let contact of contacts">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingOne">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              [attr.data-bs-target]="'#A' + contact.id"
+              aria-expanded="true"
+              aria-controls="collapseOne"
+            >
             {{ contact.content }}
-          </button>
-        </h2>
-        <div
-          id="{{ 'A' + contact.id }}"
-          class="accordion-collapse collapse"
-          aria-labelledby="headingOne"
-          data-bs-parent="#accordionExample"
-        >
-          <div class="accordion-body">
-            <strong> {{ contact.content }} </strong>
-
-            <div class="row">
-              <div class="col-12 d-flex justify-content-center">
-                <button class="btn btn-primary me-1" (click)="editContact(contact)">
+            </button>
+          </h2>
+          <div
+            id="{{ 'A' + contact.id }}"
+            class="accordion-collapse collapse"
+            aria-labelledby="headingOne"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body">
+              <strong> {{ contact.content }} </strong>
+              <div class="row">
+                <div class="col-12 d-flex justify-content-center">
+                  <button class="btn btn-primary me-1" (click)="editContact(contact)">
                   EDIT
-                </button>
-                <button class="btn btn-danger ms-1" (click)="deleteContact(contact)">
+                  </button>
+                  <button class="btn btn-danger ms-1" (click)="deleteContact(contact)">
                   DELETE
-                </button>
+                  </button>
+                </div>
               </div>
             </div>
           </div>
